--- a/src/documents/contact.html
+++ b/src/documents/contact.html
@@ -5,9 +5,9 @@ tags: ['contact']
 ---
 
 <style type="text/css">
-    .contact-btn{
-        display:none !important;
-    }
+    .contact-btn{display:none !important;}
+    .we-bitcoin{color:#EEF7FF;}
+        .bitcoin-icon{fill:#EEF7FF;}
 </style>
 
 <iframe width="100%" height="1505" style="border:0" src="https://docs.google.com/forms/d/1Rhv4JrkiK9muWjUlykIsNGKy_qUJvJO5PHCvitLgbvw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
